# DP-EOT

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
dpeot/: __init__.py
dpeot/experiments/: __init__.py  export_detector_threshold_sweep.py  export_negative_controls.py  export_stress_sweep.py  export_threshold_sweep.py  export_two_target_benchmark.py  plot_two_target_timeline.py  run_two_target_crossing.py  summarize_stress_sweep.py
dpeot/metrics/: __init__.py  group_detection.py  identity.py
dpeot/models/: __init__.py  rate.py
dpeot/partitions/: __init__.py  distance_partition.py  dp_partition.py  mfm_partition.py  oracle_partition.py
dpeot/scenarios/: __init__.py  two_target_merge_split.py
dpeot/tracking/: __init__.py  merge_split_filter.py  partition_scoring.py  unresolved_group.py
tests/: test_benchmark_export.py  test_detector_threshold_sweep.py  test_group_detection_metrics.py  test_identity_metrics.py  test_merge_split_filter.py  test_mfm_partition.py  test_negative_controls.py  test_partition_scoring.py  test_rate_model.py  test_scenario_generation.py  test_stress_sweep.py  test_stress_sweep_summary.py  test_two_target_benchmark.py
